<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/CreateAccountPersonalInformation"
    android:background="@color/backgroundLogin"
    tools:context=".auth.presentation.view.CreateAccountPersonalInfoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topappbar"
            app:titleTextColor="@color/colorText"
            app:navigationIconTint="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="Create Account" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/text_mobile_num"
        android:layout_width="0dp"
        android:textColor="@color/colorText"
        android:layout_height="wrap_content"
        android:text="@string/step_1_personal_information"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="@dimen/_16sdp"
        android:layout_margin="@dimen/_15sdp"
        android:progress="20"
        android:progressDrawable="@drawable/custom_progressbar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mobile_num" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/personalCaptainImage"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/dotted_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <ImageView
            android:id="@+id/pickImage"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/baseline_add_a_photo_24"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            <TextView

                android:id="@+id/PersonalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Personal Image"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickImage" />

        <ImageView
            android:id="@+id/img_personal_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/delete_personal_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            android:visibility="gone"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/upload_personal_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/baseline_done_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/delete_personal_photo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nationalIdFrontImage"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/dotted_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalCaptainImage"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        >


        <ImageView
            android:id="@+id/pickImage2"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/baseline_add_a_photo_24"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            <TextView

                android:id="@+id/idFrontText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/id_front"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickImage2" />

        <ImageView
            android:id="@+id/img_id_front"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/deleteIdFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            android:visibility="gone"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/uploadIdFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/baseline_done_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteIdFront"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nationalIdBack"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/dotted_border"
        app:layout_constraintBottom_toBottomOf="@+id/nationalIdFrontImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nationalIdFrontImage"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        >

        <ImageView
            android:id="@+id/pickImage3"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/baseline_add_a_photo_24"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/idBackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/id_back"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickImage3" />

        <ImageView
            android:id="@+id/img_id_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/deleteIdBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            android:visibility="gone"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/uploadIdback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_handle_bg"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/baseline_done_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteIdBack"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/submit_and_continue_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        android:background="@drawable/firstbuttonback"
        android:gravity="center"
        android:text="@string/submit_and_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/nationalIdFrontImage"
        tools:layout_editor_absoluteX="90dp" />

</androidx.constraintlayout.widget.ConstraintLayout>